--- a/css/style.css
+++ b/css/style.css
@@ -24,16 +24,15 @@ ul {
   padding: 0;
 }
 .conteiner {
-  width: 1500px;
-  margin-right: 0 auto;
-  margin-left: 0 auto;
- box-sizing: bording-box;
+  width: 1158px;
+  margin: 0 auto;
   padding: 0 15px;
-  
+  height: auto;
 }
 img {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
 body {
@@ -73,9 +72,22 @@ body {
 /*------Head------*/
 .header {
   padding: 24px 156px;
+  display: flex;
+}
+.header-flex {
+  display: flex;
+  gap: 40px;
+ 
+}
+.header .conteiner { 
+  display: flex; 
 }
 .conteiner-head {
-  padding: 188px 473px 292px;
+  width: 494px;
+ display: flex;
+ text-align: center;
+ padding-top: 188px ;
+ padding-bottom: 292px;
 }
 .logo-studio {
   font-family: var(--secondary-font);
@@ -85,6 +97,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-title-color);
+  margin-right: 76px;
 }
 
 .logo-web {
@@ -95,22 +108,28 @@ body {
   font-weight: 800;
   font-size: 18px;
   line-height: 1.33;
+  margin-right: 147px;
 }
 
 .header-navigation {
   padding: 24px, 156px;
+  display: flex;
+  align-items: center;
 }
 .header-head:hover,
 .header-head:focus {
   color: var(--background-color);
 }
-
+address {
+  margin-left: auto;
+}
 .header-head {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--main-title-color);
+  
 }
 
 .header-link {
@@ -120,6 +139,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--secondary-title-color);
+  align-items: flex-end;
 }
 
 .item {
@@ -140,6 +160,17 @@ body {
   align-items: center;
   letter-spacing: 0.04em;
   color: var(--thirdary-title-color);
+  
+}
+.cont-btn {
+ max-width: 169px;
+ border-radius: 4px;
+  display: flex;
+box-sizing: content-box;
+align-items: center;
+padding: 16px 32px;
+
+margin: 0 635px;
 }
 .button-style {
   background: #404bbf;
@@ -147,9 +178,7 @@ body {
 .button-style:hover {
   background: #4d5ae5;
 }
-.cont-btn: {
-  padding: 356px 635px 188px;
-}
+
 .color {
   background: var(--background-color);
 }
@@ -164,9 +193,10 @@ body {
   align-items: flex-start;
   gap: 8px;
   justify-content: center;
-  margin: 120px 156px 125px;
+  padding-top: 120px;
+  padding-bottom: 125px;
   flex-basis: calc((100% / 4) );
-  
+  text-align: center;
   
   
 }
@@ -184,9 +214,8 @@ body {
 }
 .hero-item {
   margin-right: var(--basic-margin);
- 
   flex-wrap: wrap;
-
+width: calc((100% - 3 * 24) / 4);
 }
 .hero-subtitle {
   font-weight: 400;
@@ -199,15 +228,25 @@ body {
 }
 .pic {
   font-size: 36px;
-  line-height: 1.12;
+  line-height: 1.12;margin-right: ;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--main-title-color);
 }
 .cont-img {
-  
- padding: 125px 558px;
- 
+min-width: 323px;
+line-height: 40px;
+ display: flex;
+ margin: 125px 558px 71px;
+
+ text-align: center;
+}
+.photo-conteiner {
+display: flex;
+}
+.images {
+display: flex;
+gap: var(--basic-margin);
 }
 /*------Team------*/
 .team {
@@ -216,6 +255,11 @@ body {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--main-title-color);
+  display: flex;
+  padding-top: 120px;
+  padding-bottom: 72px;
+  margin: 0 639px;
+  box-sizing: border-box;
 }
 
 .team-name {
@@ -232,7 +276,13 @@ body {
   letter-spacing: 0.02em;
   color: var(--secondary-title-color);
 }
+.team-conteiner {
 
+}
+.card-conteiner {
+  display: flex;
+
+}
 /*------Footer------*/
 footer {
   background: var(--main-title-color);
@@ -253,9 +303,22 @@ footer {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--fourdary-title-color);
+  width: 264px;
 }
 /*----Button-Portfolio----*/
 .button {
+  display: flex;
+  flex-direction: row;
+align-items: flex-start;
+padding: 0px;
+gap: 24px;
+justify-content: center;
+
+position: absolute;
+width: 586px;
+}
+.button .conteiner {
+  display: flex;
 }
 .button-link {
 }
@@ -267,8 +330,7 @@ footer {
   color: var(--back-color-title);
 }
 /*----Images-portfolio----*/
-.images {
-}
+
 .text {
   font-weight: 500;
   font-size: 20px;
