--- a/css/style.css
+++ b/css/style.css
@@ -71,12 +71,15 @@ body {
   overflow: hidden;
   
 }
-
+.section {
+  padding-top: var(--basic-space);
+  padding-bottom: var(--basic-space);
+}
 /*------Head------*/
 .header {
   padding: 24px 156px;
   display: flex;
-  border-bottom: solid 1px #E7E9FC;
+  border-bottom: solid 1px var(--fourdary-title-color);
 }
 .header-flex {
   display: flex;
@@ -168,15 +171,12 @@ address {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  display: flex;
   letter-spacing: 0.04em;
   color: var(--thirdary-title-color);
   text-align: center;
   padding: 16px 32px;
   border:transparent;
   cursor: pointer;
-  margin-bottom: 48px;
-  margin-left: 473px;
   border-radius: 4px;
 }
 
@@ -191,10 +191,10 @@ padding: 16px 32px;
 margin: 0 635px;
 }
 .button-style {
-  background: #404bbf;
+  background: var(--background-color);
 }
 .button-style:hover {
-  background: #4d5ae5;
+  background: var(--back-color-title);
 }
 
 .color {
@@ -206,10 +206,8 @@ margin: 0 635px;
  
 }
 .cont-hero {
-  display: flex;
+ display: flex;
   gap: var(--basic-size);
-  padding-top: var(--basic-space);
-  padding-bottom: 125px;
   
 }
 .hero-name {
@@ -238,15 +236,16 @@ margin: 0 635px;
 }
 .pic {
   font-size: 36px;
-  line-height: 1.12;margin-right: ;
+  line-height: 1.12;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--main-title-color);
+  padding-top: 0;
 }
 .cont-img {
 margin-bottom: 72px;
  text-align: center;
- margin-bottom: var(--basic-space);
+ 
 }
 .photo-conteiner {
 display: flex;
@@ -256,7 +255,8 @@ display: flex;
   gap: var(--basic-size);
 }
 .img {
-  padding-bottom: var(--basic-space);
+ padding-top: 0;
+ padding-bottom: var(--basic-space);
 }
 
 
@@ -279,8 +279,9 @@ margin-bottom: 72px;
 .team-text {
   padding: 32px 16px;
   text-align: center;
-  background-color: var(--background-secondary-color);
   border-radius: 0px 0px 4px 4px;
+border: 1px solid var(--fourdary-title-color);
+background: var(--thirdary-title-color);
 }
 .team-name {
   font-weight: 500;
@@ -345,6 +346,7 @@ cursor: pointer;
 }
 .button-cont .conteiner {
   display: flex;
+  flex-wrap: wrap;
 }
 .button-link {
 }
@@ -359,16 +361,15 @@ padding: 12px var(--basic-size);
 box-sizing: border-box;
 border-radius: 4px;
 order: 1;
-border: 1px solid #E7E9FC;
+border: 1px solid var(--fourdary-title-color);
+margin-bottom: 72px;
 }
 /*----Images-portfolio----*/
 .images-cont {
   display: flex;
   gap:48px  var(--basic-size);
   flex-wrap: wrap;
-  margin-bottom: 72px;
-  margin-top: 110px;
-  justify-content: center;
+ 
 }
 .text {
   font-weight: 500;
@@ -386,8 +387,8 @@ border: 1px solid #E7E9FC;
   margin-top: 8px;
 }
 .images-text-cont {
-  background: #FFFFFF;
-  border: 1px solid #E7E9FC;
+  background: var(--thirdary-title-color);
+  border: 1px solid var(--fourdary-title-color);
   padding: 32px 16px;
   
   
